--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,12 @@
 [tool.poetry]
-name = "django-unfold"
+name = "django-unfold-patrick"
 version = "0.43.0"
-description = "Modern Django admin theme for seamless interface development"
+description = "Modern Django admin theme for seamless interface development - customized by @kyong-dev"
 license = "MIT"
 readme = "README.md"
 authors = []
 homepage = "https://unfoldadmin.com"
-repository = "https://github.com/unfoldadmin/django-unfold"
+repository = "https://github.com/kyong-dev/django-unfold"
 packages = [{ include = "unfold", from = "src" }]
 keywords = ["django", "admin", "tailwind", "theme"]
 classifiers = [
