--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
+asgiref==3.8.1
 backports.tarfile==1.2.0
 build==1.2.2.post1
 certifi==2024.12.14
 charset-normalizer==3.4.1
+Django==5.1.6
 docutils==0.21.2
 idna==3.10
 importlib_metadata==8.5.0
@@ -22,6 +24,7 @@ requests==2.32.3
 requests-toolbelt==1.0.0
 rfc3986==2.0.0
 rich==13.9.4
+sqlparse==0.5.3
 twine==6.0.1
 urllib3==2.3.0
 zipp==3.21.0
